Fix movie spacing

--- a/client/styles/application.scss
+++ b/client/styles/application.scss
@@ -9,7 +9,7 @@
 
 .panel-default {
   width: 415px;
-  margin-top: 40px;
+  margin-top: 10px;
 }
 
 
@@ -18,7 +18,7 @@
 }
 
 .panel-container {
-  margin-top: 120px;
+  margin-top: 140px;
 }
 
 .fresh {
